--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
           <div class="card-body">
             <div class="container">
               <div class="row">
-                <div class="col text-center">
+                <div class="col">
                   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active" data-bs-interval="5000">
+                      <div class="carousel-item active" data-bs-interval="3000">
                         <img src="./Clausulas.png" class="d-block w-100" alt="...">
                       </div>
-                      <div class="carousel-item" data-bs-interval="5000">
+                      <div class="carousel-item" data-bs-interval="3000">
                         <img src="./Clausulas 1.png" class="d-block w-100" alt="...">
                       </div>
-                      <div class="carousel-item" data-bs-interval="5000">
+                      <div class="carousel-item" data-bs-interval="3000">
                         <img src="./Clausulas 2.png" class="d-block w-100" alt="...">
                       </div>
-                      <div class="carousel-item" data-bs-interval="5000">
+                      <div class="carousel-item" data-bs-interval="3000">
                         <img src="./Clausulas 3.png" class="d-block w-100" alt="...">
                       </div>
                     </div>
@@ -118,6 +118,116 @@
         </div>
       </div>
 
+    </section>
+
+
+    <section id="Clientes">
+      <div class="container pt-5 text-center ">
+        <h1>Clientes satisfechos</h1>
+        <div class="row pt-2">
+          <div class="col-12 col-lg pt-4">
+            <div class="card">
+              <div class="card-body">
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg pt-4">
+            <div class="card">
+              <div class="card-body">
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg pt-4">
+            <div class="card">
+              <div class="card-body">
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+                hhhhhhhhhhhhhhhhhh
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="Marketing">
+      <div class="container-fluid m-0 p-0 pt-5 mt-2">
+        <div class="card">
+          <div class="card-body">
+            <div class="container text-center">
+              <div class="row">
+                <div class="col-12 col-lg">
+                  <img src="./Marketing.png" alt="" width="70%">
+                </div>
+                <div class="col-12 col-lg">
+                  <h1>¿Que es marketing?</h1>
+                  <p class="mt-4">Hoy en día el marketing es una estrategia que toda empresa debe implementar en su plan global para 
+                    poder crecer. Muchas compañías usan técnicas de marketing para conseguir sus objetivos, incluso sin 
+                    darse cuenta. La mercadotecnia no es otra cosa que el intercambio entre varias partes, de forma que 
+                    se produzca un beneficio mutuo.</p>
+                    <p>Muchas personas no saben exactamente qué es el marketing y cuando se les pregunta lo definen con 
+                      que es vender y otros que es publicidad. Todas las respuesta son verdad, pero solo son una parte de 
+                      lo que significa marketing, porque también puede ser distribución de producto, diseño de packaging o 
+                      crear landing pages.</p>
+                  <p>  El paraguas del marketing es muy amplio y engloba todas aquellas estrategias que ayudan a una empresa, 
+                    marca o persona a conseguir sus objetivos.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+
+          </div>
+        </div>
+      </div>
     </section>
 
 
