--- a/index.html
+++ b/index.html
@@ -220,11 +220,39 @@
     </section>
 
 
-    <section>
-      <div class="container">
-        <div class="row">
-          <div class="col">
+    <section id="Desarrollo">
+      <div class="container mt-5 pt-3">
+        <div class="container  text-center">
+          <div class="row">
+            <div class="col-12 col-lg mt-4">
+              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="./Paginas Web.png" class="d-block " alt="..." width="70%" >
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./Paginas Web html.png" class="d-block " alt="..." width="70%">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./Paginas Web Css.png"  class="d-block " alt="..." width="70%"> 
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./Paginas Web java.png"  class="d-block " alt="..." width="70%">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg">
+              <p class="mt-5 pt-3">Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un segundo 
+                plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y un buen 
+                desempeño para permitir la mejor experiencia de usuario. Los desarrolladores web son como duendes con 
+                poderes: nunca los ves, pero son los que hacen que todo esté bien y funcione de manera rápida y eficiente.</p>
 
+              <p>Desde la aparición de Internet, el paradigma de comunicación y de comercialización de bienes y servicios ha cambiado por 
+                completo. Por eso, conocer qué es el desarrollo web es esencial para descubrir de qué modo se construyen y diseñan todos las 
+                páginas que visitamos a diario, junto con las distintas apps móviles. Y más aún, si deseas convertir tu pasión por los sitios 
+                en línea en una fuente de desarrollo económico y profesional. </p>
+            </div>
           </div>
         </div>
       </div>
