--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
 
 
     <section id="Desarrollo">
-      <div class="container mt-5 pt-3">
-        <div class="container text-center">
+        <div class="container mt-5 pt-3 text-center">
           <h1>¿Que es el desarrollo Web?</h1>
           <div class="row">
             <div class="col-12 col-lg mt-4">
@@ -256,7 +255,6 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
 
