--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <button id="Boton1">Grupo de WhatsApp</button>
                 </div>
                 <div class="col-12 col-lg-6 pt-3">
-                  <button id="Boton2">Chat Directo</button>
+                  <a href="https://wa.link/wflkxy"><button id="Boton2">Chat Directo</button></a>
                 </div>
             </div>
         </div>
