--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="card-body">
                               <div class="row">
                                 <div class="col-12 text-center">
-                                  <img src="./imagenes/image.svg.png" alt="" width="30%">
+                                  <img src="./image.svg.png" alt="" width="30%">
                                 </div>
                               </div>
                               <div class="row">
@@ -346,7 +346,7 @@
                             <div class="card-body">
                               <div class="row">
                                 <div class="col-12 text-center">
-                                  <img src="./imagenes/image.svg.png" alt="" width="30%">
+                                  <img src="./image.svg.png" alt="" width="30%">
                                 </div>
                               </div>
                               <div class="row">
@@ -462,25 +462,31 @@
         <div class="card ">
           <div class="card-body">
             <div class="row">
-              <div class="col text-center p-5">
-                <h1>Contacto</h1>
+              <div class="col">
+                <div class="container">
+                  <div class="row">
+                    <div class="col text-center p-5">
+                      <h1>Contacto</h1>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col text-center ">
+                      <p>Cuéntanos, ¿qué necesitas?. Estaremos encantados de escucharte y ayudarte con tu proyecto de diseño y desarrollo web.</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col text-center ">
+                      <p>Contactarnos a través de nuestro Whatsapp</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col text-center pt-4 pb-5">
+                      <a href="https://wa.link/wflkxy"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
+                    </div>
+                  </div>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col text-center ">
-                <p>Cuéntanos, ¿qué necesitas?. Estaremos encantados de escucharte y ayudarte con tu proyecto de diseño y desarrollo web.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col text-center ">
-                <p>Contactarnos a través de nuestro Whatsapp</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col text-center pt-4 pb-5">
-                <a href="https://wa.link/wflkxy"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
-              </div>
-            </div>
           </div>
         </div>
       </div>
