--- a/index.html
+++ b/index.html
@@ -496,29 +496,22 @@
     <footer id="footer">
         <div class="container text-center">
             <div class="row" >
-                <div class="col-12 col-xl p-4" >
-                    <a class="nav-link" href="">Contacto</a>
+                <div class="col-12 col-xl p-5" >
+                    <img src="./Logo.png" alt="" width="40%">
                 </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Portafolio Web</a>
-                </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Portafolio Grafico</a>
-                </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Marketing Digital</a>
-                </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Diseñadores</a>
-                </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Programadores</a>
-                </div>
-                <div class="col-12 col-xl p-4">
-                    <a class="nav-link" href="">Agente de marketing</a>
-                </div>
-                
+            </div><div class="row" >
+              <div class="col-12 col-xl" >
+                  <p>Agencia de Diseño Web en Caracas Venezuel</p>
+              </div>
+          </div><div class="row" >
+            <div class="col-12 col-xl" >
+                <p>Empresa de Diseño y Desarrollo Web - Marketing Online - Servicios de Desarrollo Web Wordpress - HTML,CSS,JavaScript </p>
             </div>
+        </div><div class="row" >
+          <div class="col-12 col-xl" >
+              <p>(Whatsapp) +58-424-5542026</p>
+          </div>
+      </div>
         </div>
     </footer>
 
