--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="card-body">
                               <div class="row">
                                 <div class="col-12 text-center">
-                                  <img src="./image.svg.png" alt="" width="30%">
+                                  <img src="./image.svg-min.png" alt="" width="30%">
                                 </div>
                               </div>
                               <div class="row">
@@ -346,7 +346,7 @@
                             <div class="card-body">
                               <div class="row">
                                 <div class="col-12 text-center">
-                                  <img src="./image.svg.png" alt="" width="30%">
+                                  <img src="./image.svg-min.png" alt="" width="30%">
                                 </div>
                               </div>
                               <div class="row">
