--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./Style.css">
 </head>
   <body>
@@ -61,10 +63,10 @@
   
   
   <section>
-  <div class="container text-center " id="Contenido1">
+  <div class="container text-center" id="Contenido1">
     <div class="row align-items-center">
-        <div class="col-12 col-xl-7 pt-5" id="Titulo">
-            <h2 class="">Diseño de Páginas Web, Gestión de Redes Sociales, Gestión de Marketing</h2>
+        <div class="col-12 col-xl-7" id="Titulo">
+            <h2 class="" data-aos="zoom-in" data-aos-duration="1500">Diseño de Páginas Web, <br>  Gestión de Redes Sociales, <br> Gestión de Marketing</h2>
   
             <p class="mt-4 ">Gestión de Marketing | HTML | Gestión de Redes Sociales | Redacción | Diseño Gráfico</p>
           </div>
@@ -110,7 +112,7 @@
                 </div>
               </div>
                     <div class="row ">
-                      <div class="col-12 col-xl  pt-3 m-0 p-0">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
                         <div class="container " id="precio">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -151,7 +153,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
                         <div class="container " id="precio">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -192,7 +194,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
                         <div class="container" id="precio">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -311,7 +313,7 @@
           <div class="card-body">
             <div class="container">
                     <div class="row ">
-                      <div class="col-12 col-xl  pt-3 m-0 p-0">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                         <div class="container ">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -340,7 +342,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                         <div class="container ">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -454,8 +456,83 @@
               </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col text-center" id="">
+            
+          </div>
+        </div>
       </div>
     </section>
+
+
+
+    <section id="BlockChain">
+      <div class="container-fluid m-0 p-0">
+        <div class="card pt-5 pb-5">
+          <div class="card-body">
+            <div class="container">
+                    <div class="row ">
+                      <div class="col-12 col-xl m-0 p-3">
+                        <div class="container ">
+                              <div class="row">
+                                <div data-aos="fade-right" data-aos-duration="2000" class="col-12 text-center">
+                                  <img src="./BlockChain.png" alt="" width="80%" id="blockchain" >
+                                </div>
+                              </div>
+                        </div>
+                      </div>
+                      <div class="col-12 col-xl  m-0 p-2" >
+                        <div class="container ">
+                          <div class="card">
+                            <div class="card-body">
+                              <div class="row">
+                                <div class="col-12 text-center" >
+                                  <img src="./BlockChain2.png" alt="" width="30%" >
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-12 mt-4">
+                                  <h3>Desarrollo y conexión blockchain</h3>
+                                </div>
+                              </div> 
+                              <div class="row mt-3 ">
+                                <div class="col-12 ">
+                                  <p>Consultoría Blockchain.</p>
+                                  <p>Desarrollo de Smart Contract.</p>
+                                  <p>Desarrollo DAPP.</p>
+                                  <p>Asesoramiento legal.</p>
+                                </div>
+                              </div>
+                              <div class="row mt-3">
+                                <div class="col-12 text-center">
+                                  <a class="nav-link" href=""><button>Solicitar información</button></a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+
+            Streame            
+
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <section id="contacto">
       <div class="container-fluid m-0 p-0">
@@ -492,6 +569,9 @@
       </div>
     </section>
 
+
+
+
     
     <footer id="footer">
         <div class="container text-center">
@@ -499,23 +579,29 @@
                 <div class="col-12 col-xl p-5" >
                     <img src="./Logo.png" alt="" width="40%">
                 </div>
-            </div><div class="row" >
-              <div class="col-12 col-xl" >
-                  <p>Agencia de Diseño Web en Caracas Venezuel</p>
-              </div>
-          </div><div class="row" >
-            <div class="col-12 col-xl" >
-                <p>Empresa de Diseño y Desarrollo Web - Marketing Online - Servicios de Desarrollo Web Wordpress - HTML,CSS,JavaScript </p>
+                </div>
+                <div class="row" >
+                  <div class="col-12 col-xl" >
+                      <p>Agencia de Diseño en Barquisimeto Venezuela</p>
+                  </div>
+                </div>
+                <div class="row" >
+                  <div class="col-12 col-xl" >
+                      <p>Empresa de Diseño y Desarrollo Web - Marketing Online - Servicios de Desarrollo Web Wordpress - HTML,CSS,JavaScript - Desarrollo BlockChain</p>
+                  </div>
+                </div>
+                <div class="row" >
+                  <div class="col-12 col-xl" >
+                      <p>(Whatsapp) +58-424-5542026</p>
+                  </div>
+                </div>
             </div>
-        </div><div class="row" >
-          <div class="col-12 col-xl" >
-              <p>(Whatsapp) +58-424-5542026</p>
-          </div>
-      </div>
-        </div>
     </footer>
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
