--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="zoom-in-down"  data-aos-duration="1700">
                         <div class="container " id="precio">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -194,7 +194,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2500">
                         <div class="container" id="precio">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -526,7 +526,6 @@
         <div class="row">
           <div class="col">
 
-            Streame            
 
           </div>
         </div>
