--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="card-body">
             <div class="container">
                     <div class="row ">
-                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="700">
                         <div class="container ">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -342,7 +342,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                      <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="700">
                         <div class="container ">
                           <div class="card pt-3 pb-3">
                             <div class="card-body">
@@ -578,6 +578,13 @@
                 <div class="col-12 col-xl p-5" >
                     <img src="./Logo.png" alt="" width="40%">
                 </div>
+                </div>
+                <div class="row" >
+                  <div class="col col-xl pb-3">
+                    <a href="https://www.behance.net/jpartcreativity" target="_blank"><img src="./Logo Behance.png" alt="" width="5%"></a>
+                    <a href="https://www.behance.net/jpartcreativity" target="_blank"><img src="./Logo Behance.png" alt="" width="5%"></a>
+                    <a href="https://www.behance.net/jpartcreativity" target="_blank"><img src="./Logo Behance.png" alt="" width="5%"></a>
+                  </div>
                 </div>
                 <div class="row" >
                   <div class="col-12 col-xl" >
