--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
 </section>
 
 <section id="Streamers">
-    <div class="container mt-4 mb-2">
+    <div class="container mt-4 mb-2 pt-5 pb-5">
       <div class="row">
-        <div class="col text-center mb-3">
+        <div class="col text-center mb-5">
           <h1>JP STREAM PACK DESIGN</h1>
         </div>
       </div>
@@ -321,54 +321,38 @@
     </div>   
 </section>
 
-<section id="BlockChain">
+<section id="contacto">
     <div class="container-fluid m-0 p-0">
-      <div class="card pt-5 pb-5">
+      <div class="card pt-3 pb-3">
         <div class="card-body">
-          <div class="container">
-                  <div class="row ">
-                    <div class="col-12 col-xl m-0 p-3">
-                      <div class="container ">
-                            <div class="row">
-                              <div data-aos="fade-right" data-aos-duration="2000" class="col-12 text-center">
-                                <img src="./BlockChain.png" alt="" width="80%" id="blockchain" >
-                              </div>
-                            </div>
-                      </div>
+          <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="container">
+                    <div class="row">
+                     <div class="col text-center p-5">
+                        <h1>Contacto</h1>
                     </div>
-                    <div class="col-12 col-xl  m-0 p-2" >
-                      <div class="container ">
-                        <div class="card">
-                          <div class="card-body">
-                            <div class="row">
-                              <div class="col-12 text-center" >
-                                <img src="./BlockChain2.png" alt="" width="30%" >
-                              </div>
-                            </div>
-                            <div class="row">
-                              <div class="col-12 mt-4">
-                                <h3>Desarrollo y conexión blockchain</h3>
-                              </div>
-                            </div> 
-                            <div class="row mt-3 ">
-                              <div class="col-12 ">
-                                <p>Consultoría Blockchain.</p>
-                                <p>Desarrollo de Smart Contract.</p>
-                                <p>Desarrollo DAPP.</p>
-                                <p>Asesoramiento legal.</p>
-                              </div>
-                            </div>
-                            <div class="row mt-3">
-                              <div class="col-12 text-center">
-                                <a class="nav-link" href=""><button>Solicitar información</button></a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center ">
+                    <p>Cuéntanos, ¿qué necesitas?. Estaremos encantados de escucharte y ayudarte con tu proyecto de diseño y desarrollo web.</p>
                     </div>
-                  </div>
-          </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center ">
+                    <p>Contactarnos a través de nuestro Whatsapp</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center pt-4 pb-5">
+                    <a href="https://wa.link/wflkxy"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
+                    </div>
+                </div>
+                </div>
+                </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
@@ -376,36 +360,6 @@
 
 
 
-<section id="contacto">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <div class="container">
-                <div class="row">
-                 <div class="col text-center p-5">
-                    <h1>Contacto</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center ">
-                <p>Cuéntanos, ¿qué necesitas?. Estaremos encantados de escucharte y ayudarte con tu proyecto de diseño y desarrollo web.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center ">
-                <p>Contactarnos a través de nuestro Whatsapp</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center pt-4 pb-5">
-                <a href="https://wa.link/wflkxy"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
-                </div>
-            </div>
-            </div>
-            </div>
-        </div>
-    </div>
-</section>
 
     
 <footer id="footer">
