--- a/Streamers.html
+++ b/Streamers.html
@@ -16,9 +16,7 @@
 
     
 
-  <div class="container-fluid p-0">
-    <div class="card pt-2 pb-5"  id="card-fondo-1">
-      <div class="card-body">
+  <div class="container-fluid p-0 pt-4" id="card-fondo-1">
         <nav class="navbar navbar-expand-xl" id="container" >
           <div class="container ">
               <img src="./Logo.png" alt="" width="120px">
@@ -36,18 +34,16 @@
                         <a class="nav-link" href="./index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./DiseñoWeb.html">Diseño Web</a>
+                    <div class="card-body">
+                        <a class="nav-link" href="./DiseñoWeb.html" target="_blank">Diseño Web</a>
                       </li>
                       <li class="nav-item dropdown ">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Diseño Grafico
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                            <li><a class="dropdown-item" href="#">Ilustración</a></li>
-                            <li><a class="dropdown-item" href="#">Branding</a></li>
-                            <li><a class="dropdown-item" href="#">Diseño 3D</a></li>
-                            <li><a class="dropdown-item" href="./Streamers.html">Streamers</a></li>
-                            <li><a class="dropdown-item" href="./DiseñoGrafico.html">Gestión de Redes</a></li>
+                            <li><a class="dropdown-item" href="./Streamers.html" target="_blank">Streamers</a></li>
+                            <li><a class="dropdown-item" href="./DiseñoGrafico.html" target="_blank">Gestión de Redes</a></li>
                         </ul>
                       </li>
                         <li class="nav-item">
@@ -69,7 +65,7 @@
               </div>
         </nav>
 
-        <div class="container p-5">
+        <div class="container pt-5 pb-5">
             <div class="row" >
                 <div class="col-12 text-center" data-aos="zoom-in" data-aos-duration="1500">
                     <h1 id="Titulo" class="">Streamers</h1>
