--- a/indexx.html
+++ b/indexx.html
@@ -12,9 +12,14 @@
     <link rel="stylesheet" href="./Style.css">
 </head>
   <body>
-    <div class="container-fluid p-0 pt-4"  id="card-fondo-1" >
+    <div class="container-fluid p-0"   >
+        <div class="card">
+            <div clas>
+
+            </div>
+        </div>
         <nav class="navbar navbar-expand-xl" id="container" >
-          <div class="container " >
+          <div class="container " id="card-fondo-1">
               <img src="./Logo.png" alt="" width="120px">
               
               <img src="./Fonto de Menu.png" alt="" width="50px" class="navbar-toggler"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
@@ -37,8 +42,8 @@
                             Diseño Grafico
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                          <li><a class="dropdown-item" href="./Streamers.html" target="_blank">Streamers</a></li>
-                          <li><a class="dropdown-item" href="./DiseñoGrafico.html" target="_blank">Gestión de Redes</a></li>
+                          <li><a class="dropdown-item" href="./Streamers.html">Streamers</a></li>
+                          <li><a class="dropdown-item" href="./DiseñoGrafico.html">Gestión de Redes</a></li>
                         </ul>
                       </li>
                         <li class="nav-item">
@@ -62,14 +67,14 @@
 
 
         <section>
-            <div class="container pt-5 pb-5" id="Contenido1">
-              <div class="row text-center  ">
+            <div class="container " id="Contenido1">
+              <div class="row text-center align-items-center  ">
                   <div class="col-12 col-xl-7" id="Titulo">
-                      <h2 class="" data-aos="zoom-in" data-aos-duration="1500" >Diseño de Páginas Web, <br>  Gestión de Redes Sociales, <br> Gestión de Marketing</h2>
+                      <h2 class="" data-aos="zoom-in" data-aos-duration="1500">Diseño de Páginas Web, <br>  Gestión de Redes Sociales, <br> Gestión de Marketing</h2>
             
                       <p class="mt-4 ">Gestión de Marketing | HTML | Gestión de Redes Sociales | Redacción | Diseño Gráfico</p>
                       <button id="Boton1"><i class="bi bi-person-lines-fill mt-5 me-2"></i>Solicitar cotización</button>
-                      <a href="https://wa.link/wflkxy" target="_blank"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat </button></a>
+                      <a href="https://wa.link/wflkxy" ><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat </button></a>
                     </div>
               </div>
             </div>
@@ -120,7 +125,7 @@
                   </div>
                   <div class="row">
                     <div class="col pt-5">
-                      <a href="./DiseñoWeb.html"><button>Solicitar información</button></a>
+                      <button>Solicitar información</button>
                     </div>
                   </div>
           </div>
@@ -197,13 +202,13 @@
             <div class="card-body">
               <div class="container">
                       <div class="row ">
-                        <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="zoom-in" data-aos-offset="-100" data-aos-duration="2000">
+                        <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
                           <div class="container ">
                             <div class="card pt-3 pb-3">
                               <div class="card-body">
                                 <div class="row">
                                   <div class="col-12 text-center">
-                                    <img src="./image.svg.png" alt="" width="30%">
+                                    <img src="./image.svg-min.png" alt="" width="30%">
                                   </div>
                                 </div>
                                 <div class="row">
@@ -219,20 +224,20 @@
                                 </div>
                                 <div class="row mt-3">
                                   <div class="col-12">
-                                    <a class="nav-link" href="./DiseñoGrafico.html"><button>Solicitar información</button></a>
+                                    <a class="nav-link" href=""><button>Solicitar información</button></a>
                                   </div>
                                 </div>
                               </div>
                             </div>
                           </div>
                         </div>
-                        <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="zoom-in" data-aos-offset="-100" data-aos-duration="2000">
+                        <div class="col-12 col-xl  pt-3 m-0 p-0" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="2000">
                           <div class="container ">
                             <div class="card pt-3 pb-3">
                               <div class="card-body">
                                 <div class="row">
                                   <div class="col-12 text-center">
-                                    <img src="./image.svg.png" alt="" width="30%">
+                                    <img src="./image.svg-min.png" alt="" width="30%">
                                   </div>
                                 </div>
                                 <div class="row">
@@ -248,7 +253,7 @@
                                 </div>
                                 <div class="row mt-3">
                                   <div class="col-12">
-                                    <a class="nav-link" href="https://wa.link/6t4hcp" target="_blank"><button>Solicitar información</button></a>
+                                    <a class="nav-link" href=""><button>Solicitar información</button></a>
                                   </div>
                                 </div>
                               </div>
@@ -264,11 +269,6 @@
 
     <section id="Streamers">
                 <div class="container pt-5 pb-4">
-                  <div class="row">
-                    <div class="col text-center pb-5"> 
-                      <h1>Streamers</h1>
-                    </div>
-                  </div>
                     <div class="row align-items-center text-center">
                         <div class="col-12 col-xl">
                             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -285,13 +285,13 @@
                                 </div>
                               </div>
                         </div>
-                        <div class="col-12 col-xl d-none d-md-block" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-offset="-250" data-aos-easing="ease-in-sine" data-aos-duration="600">
+                        <div class="col-12 col-xl d-none d-md-block" data-aos="zoom-in" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="700">
                             <img src="./Streamers.png" alt="" width="80%">
                         </div>
                     </div>
-                    <div class="row pt-5 pb-4">
+                    <div class="row mt-4">
                         <div class="col">
-                            <a class="nav-link" href="./Streamers.html"><button>Solicitar información</button></a>
+                            <a class="nav-link" href=""><button>Solicitar información</button></a>
                         </div>
                     </div>
                 </div>
@@ -322,8 +322,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col text-center pt-2 pb-5">
-                    <a href="https://wa.link/wflkxy" target="_blank"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
+                    <div class="col text-center pt-4 pb-5">
+                    <a href="https://wa.link/wflkxy"><button id="Boton2"><i class="bi bi-whatsapp me-2"></i>Chat Directo</button></a>
                     </div>
                 </div>
                 </div>
@@ -360,7 +360,7 @@
             </div>
             <div class="row" >
                 <div class="col-12 col-xl" >
-                    <p>Empresa de Diseño y Desarrollo Web - Marketing Online - Servicios de Desarrollo Web Wordpress - HTML,CSS,JavaScript</p>
+                    <p>Empresa de Diseño y Desarrollo Web - Marketing Online - Servicios de Desarrollo Web Wordpress - HTML,CSS,JavaScript - Desarrollo BlockChain</p>
                 </div>
             </div>
             <div class="row" >
