--- a/DiseñoWeb.html
+++ b/DiseñoWeb.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="row pt-3" >
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/a7zg89"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
@@ -164,7 +164,7 @@
                         </div>
                         <div class="row pt-3">
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/qbzpem"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
@@ -223,7 +223,7 @@
                         </div>
                         <div class="row pt-3">
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/8i5lji"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
@@ -296,7 +296,7 @@
                         </div>
                         <div class="row pt-3" id="BotonTienda">
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/hpeaa3"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
@@ -355,7 +355,7 @@
                         </div>
                         <div class="row pt-3" id="BotonTienda">
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/xbq98a"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
@@ -416,7 +416,7 @@
                         </div>
                         <div class="row pt-3" id="BotonTienda">
                             <div class="col">
-                                <a href=""><button>Comenzar</button></a>
+                                <a href="https://wa.link/au5dpp"><button>Comenzar</button></a>
                             </div>
                             <div class="col">
                                                                     <!-- Button trigger modal -->
