--- a/Streamers.html
+++ b/Streamers.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="row mt-4" id="Plan1">
                                 <div class="col">
-                                    <a href=""><button>Comenzar</button></a> 
+                                    <a href="https://wa.link/bymzsd"><button>Comenzar</button></a> 
                                 </div>
                                 <div class="col">
                                     <!-- Button trigger modal -->
@@ -158,7 +158,7 @@
                             </div>
                             <div class="row  mt-4" id="Plan2">
                                 <div class="col">
-                                    <a href=""><button>Comenzar</button></a> 
+                                    <a href="https://wa.link/hl57dn"><button>Comenzar</button></a> 
                                 </div>
                                 <div class="col">
                                     <!-- Button trigger modal -->
@@ -214,7 +214,7 @@
                             </div>
                             <div class="row  mt-4" id="Plan3">
                                 <div class="col">
-                                    <a href=""><button>Comenzar</button></a> 
+                                    <a href="https://wa.link/47evlk"><button>Comenzar</button></a> 
                                 </div>
                                 <div class="col">
                                                                     <!-- Button trigger modal -->
