--- a/DiseñoGrafico.html
+++ b/DiseñoGrafico.html
@@ -98,7 +98,7 @@
                               </div>
                               <div class="row mt-4" id="Plan1">
                                   <div class="col">
-                                      <a href=""><button>Comenzar</button></a> 
+                                      <a href="https://wa.link/r4pbvq"><button>Comenzar</button></a> 
                                   </div>
                                   <div class="col">
                                       <!-- Button trigger modal -->
@@ -158,7 +158,7 @@
                               </div>
                               <div class="row  mt-4" id="Plan2">
                                   <div class="col">
-                                      <a href=""><button>Comenzar</button></a> 
+                                      <a href="https://wa.link/v846yd"><button>Comenzar</button></a> 
                                   </div>
                                   <div class="col">
                                       <!-- Button trigger modal -->
@@ -217,7 +217,7 @@
                               </div>
                               <div class="row  mt-4" id="Plan3">
                                   <div class="col">
-                                      <a href=""><button>Comenzar</button></a> 
+                                      <a href="https://wa.link/5z245c"><button>Comenzar</button></a> 
                                   </div>
                                   <div class="col">
                                                                       <!-- Button trigger modal -->
